Bug 1317153 - Provide better error message when errornous syntax possibly match "await SOMETHING" outside async function. r=till